crates/pcb/tests/snapshots/auto_deps__auto_deps_branch_dep_pins_rev_and_builds.snap
---
source: crates/pcb/tests/auto_deps.rs
expression: snapshot
---
Command: pcb build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ board.zen (1 components)

--- pcb.toml ---
[workspace]
pcb-version = "0.3"

[dependencies."github.com/mycompany/components/SimpleResistor"]
branch = "main"
rev = "<HEAD_REV>"


--- pcb.sum (dep lines) ---
github.com/mycompany/components/SimpleResistor <PSEUDO_VERSION> h1:hD/0JJLfe6wltjQFZTonYxNcE6dpU0DGBx/Lkl6BwXI=
github.com/mycompany/components/SimpleResistor <PSEUDO_VERSION>/pcb.toml h1:E3ma1g4h68BKGUerKwVIXkTssUyU3/mOx4I3AVS1nRA=
