crates/pcb/tests/snapshots/auto_deps__auto_deps_kicad_dynamic_path_pcb_toml.snap
---
source: crates/pcb/tests/auto_deps.rs
assertion_line: 165
expression: pcb_toml_content
---
[workspace]
pcb-version = "0.3"
members = [
    "components/*",
    "reference/*",
    "modules/*",
    "boards/*",
    "graphics/*",
]

[dependencies]
"gitlab.com/kicad/libraries/kicad-footprints" = "9.0.3"
