crates/pcb/tests/snapshots/auto_deps__auto_deps_kicad_symbols_pcb_toml.snap
---
source: crates/pcb/tests/auto_deps.rs
expression: pcb_toml_content
---
[workspace]
pcb-version = "0.3"

[dependencies]
"gitlab.com/kicad/libraries/kicad-symbols" = "10.0.0"
