crates/pcb/tests/snapshots/auto_deps__auto_deps_no_duplicate_pcb_toml.snap
---
source: crates/pcb/tests/auto_deps.rs
expression: pcb_toml_content
---
[workspace]
pcb-version = "0.3"

[dependencies]
"github.com/diodeinc/stdlib" = "0.4.0"
