crates/pcb/tests/snapshots/auto_deps__auto_deps_stdlib_pcb_toml.snap
---
source: crates/pcb/tests/auto_deps.rs
assertion_line: 39
expression: pcb_toml_content
---
[workspace]
pcb-version = "0.3"
members = [
    "components/*",
    "reference/*",
    "modules/*",
    "boards/*",
    "graphics/*",
]

[dependencies]
"github.com/diodeinc/stdlib" = "0.4.0"
